# Food_Delivery_API

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/api/: __init__.py  auth.py  authorization.py  categories.py  category.py  order.py  orderItem.py  orders.py  product.py  products.py  restaurant.py  user.py  userAddress.py
app/core/: config.py  database.py  dependencies.py  security.py
app/crud/: order.py  product.py  restaurant.py  user.py
app/models/: __init__.py  order.py  product.py  restaurant.py  user.py
app/schemas/: jwt_token.py  order.py  product.py  restaurant.py  user.py
migrations/: env.py
migrations/versions/: 2025_07_08_0321-4836261b6b8c_added_account_table.py  2025_07_08_1746-b01993896ab9_fix_price_in_orderitem.py  2025_07_12_1737-ed79e53713ea_delete_years_and_sex.py
