[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitaliy Dedhorg",email = "qwertyone120@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pedantic (>=2.1.9,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "redis[async] (>=6.2.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
