[tool.poetry]
name = "food delivery api"
version = "0.1.0"
description = ""
authors = ["Vitaliy Dedhorg <qwertyone120@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.13,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
sqlalchemy = ">=2.0.41,<3.0.0"
pydantic = ">=2.11.7,<3.0.0"
python-dotenv = "^1.1.1"
asyncpg = ">=0.30.0,<0.31.0"
pydantic-settings = ">=2.10.1,<3.0.0"
redis = {version = ">=6.2.0,<7.0.0", extras = ["async"]}
alembic = ">=1.16.2,<2.0.0"
black = ">=25.1.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
isort = ">=6.0.1,<7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
